Bug fix scroll caseids (#58)
* -fixed the border of the scrollbar being cut off in save_and_export.html

* -updated 'Info' section after frequency sort

* Fix styling of save and export page

--- a/static/css/partial-order.css
+++ b/static/css/partial-order.css
@@ -47,14 +47,16 @@
 .scrollable {
     overflow: scroll;
     height: auto;
-    /*width: 300px;*/
     width: auto;
     min-width: 100px;
     max-height: 100px;
-    /*background-color: #CCC;*/
     overflow-y: auto;
-    border: 1px solid black;
+}
+
+#border-custom {
+    border: 1.5px solid black;
     border-radius: 10px 10px 10px 10px;
+    padding: 2px 2px 2px 10px;
 }
 
 .scrollable-inner {
@@ -116,8 +118,12 @@
     width: 80px;
 }
 
-#save, #discard, #add_delay, #proceed-btn {
+#add_delay, #proceed-btn {
     width: 150px;
+}
+
+#save, #discard {
+    width: 100px;
 }
 
 .picker {
